shopfront/charts/templates/api_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopfront-api
  labels:
    app: shopfront-api
    tier: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shopfront-api
  template:
    metadata:
      labels:
        app: shopfront-api
        tier: backend
    spec:
      serviceAccountName: "shopfront-api-sa"
      containers:
        - name: api-app
          image: ""
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: api-port
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
        
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.0
          args:
            - "--structured-logs"
            - "--port=5432"
            - "gke-demo-502311:asia-south1:shopfront-db-instance"
          securityContext:
            runAsNonRoot: true
          resources:
            limits:
              cpu: "250m"
              memory: "256Mi"
            requests:
              cpu: "100m"
              memory: "128Mi"
