shopfront/charts/templates/web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopfront-web
  labels:
    app: shopfront-web
    tier: frontend
spec:
  replicas: 22
  selector:
    matchLabels:
      app: shopfront-web
      tier: frontend
  template:
    metadata:
      labels:
        app: shopfront-web
        tier: frontend
    spec:
      containers:
        - name: web-app
          image: ""
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
              name: web-port
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "250m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
