shopfront/charts/templates/web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopfront-web-service
  labels:
    app: shopfront-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: shopfront-web
